<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="44dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/changeUserNameEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/hint_register_w_mail_second_name"
            android:inputType="text"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/changeMailEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:descendantFocusability="beforeDescendants"
            android:ems="20"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_change_mail"
            android:inputType="none"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/changeAgeEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:descendantFocusability="beforeDescendants"
            android:ems="20"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_change_age"
            android:inputType="number"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/changeCar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:descendantFocusability="beforeDescendants"
            android:ems="20"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_change_car"
            android:inputType="text"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/changePasswordEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:ems="20"
            android:paddingTop="10dp"
            android:text="@string/btn_account_change_password"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/salveazaBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:paddingTop="10dp"
            android:text="@string/btn_account_save_changes"
            android:textColor="#fff" />
    </LinearLayout>

</RelativeLayout>