<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/oldPassEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="#fff"
        android:descendantFocusability="beforeDescendants"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        android:maxLength="300"
        android:padding="9dp" >
    </EditText>

    <EditText
        android:id="@+id/newPassEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="#fff"
        android:descendantFocusability="beforeDescendants"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:maxLength="300"
        android:padding="9dp" >
    </EditText>

    <EditText
        android:id="@+id/newPassConfirmEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="#fff"
        android:descendantFocusability="beforeDescendants"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_new_password_again"
        android:inputType="textPassword"
        android:maxLength="300"
        android:padding="9dp" >
    </EditText>

    <Button
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_account_change_password"
        android:textColor="#fff"
        android:textStyle="bold" />

</LinearLayout>