<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/background_gray" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkerGreen"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="12:34"
                    android:textColor="@color/white"
                    android:textSize="96sp" />

                <ViewSwitcher
                    android:id="@+id/weatherSwitcher"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" >

                    <ProgressBar
                        android:id="@+id/gallery_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tvCurrentWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:drawableLeft="@drawable/icon_w_cs"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/icon_w_celsius"
                        android:gravity="center"
                        android:text="17"
                        android:textColor="@color/white"
                        android:textSize="32sp" />
                </ViewSwitcher>
            </LinearLayout>

            <ListView
                android:id="@+id/linkList"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >
            </ListView>

            <Button
                android:id="@+id/btn_feeds"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnFeeds"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_accountSettings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnSettings"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnLogout"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>